# tdm-sparse-coding

./: CMakeLists.txt  INSTALL.md  LICENSE  README.md  config.h.in
apps/test_volume_compression/: float_xarray.cpp  float_xarray.hpp  ht4_volume_layout.hpp  raw_volume.cpp  raw_volume.hpp  test_volume_compression.cpp  volume_tile_stream.cpp  volume_tile_stream.hpp
data/: README.md  vorticity_magnitude.hdr  vorticity_magnitude.raw
scripts/: test_volume_compression.sh  test_volume_compression.sh~
src/vic/tdm_sparse_coding/: dictionary_coder.cpp  dictionary_coder.hpp  dictionary_coder_ksvd.cpp  dictionary_coder_ksvd.hpp  dictionary_coding_budget_optimizer.cpp  dictionary_coding_budget_optimizer.hpp  dictionary_coding_budget_optimizer_greedy_grow.cpp  dictionary_coding_budget_optimizer_greedy_grow.hpp  error_evaluator.cpp  error_evaluator.hpp  incremental_sparse_coder.cpp  incremental_sparse_coder.hpp  incremental_sparse_coder_omp.cpp  incremental_sparse_coder_omp.hpp  matching_pursuit.cpp  matching_pursuit.hpp  signal_stream.cpp  signal_stream.hpp  streaming_coreset_builder.cpp  streaming_coreset_builder.hpp  streaming_coreset_builder_reservoir.cpp  streaming_coreset_builder_reservoir.hpp  streaming_coreset_builder_uniform.cpp  streaming_coreset_builder_uniform.hpp
